add library to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Projects/Java/FirstHid/nbproject/private/
 /Projects/Java/FirstHid/build/
+/Projects/Delphi/main/library/
+/Projects/Delphi/main/win32/
