add local files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /Projects/Java/FirstHid/build/
 /Projects/Delphi/main/library/
 /Projects/Delphi/main/win32/
+/Projects/Delphi/main/__history/
+/Projects/Delphi/main/MainHID.dproj.local
+/Projects/Delphi/main/MainHID.identcache
+/Projects/Delphi/main/MainHID.res
