--- a/Projects/Delphi/main/MainHID.dproj
+++ b/Projects/Delphi/main/MainHID.dproj
@@ -78,6 +78,16 @@
             <Form>FormHID</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="library\jvcl\run\Hid.pas"/>
+        <DCCReference Include="library\jvcl\run\JvHidControllerClass.pas"/>
+        <DCCReference Include="library\jvcl\run\JvComponentBase.pas"/>
+        <DCCReference Include="library\jvcl\run\JVCLVer.pas"/>
+        <DCCReference Include="library\jvcl\run\DBT.pas"/>
+        <DCCReference Include="library\jvcl\run\JvSetupApi.pas"/>
+        <DCCReference Include="library\jvcl\run\ModuleLoader.pas"/>
+        <DCCReference Include="library\jvcl\run\WinConvTypes.pas"/>
+        <DCCReference Include="library\jvcl\run\JvTypes.pas"/>
+        <DCCReference Include="library\jvcl\run\JvResources.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
